login update pt2

--- a/public/pages/joe.html
+++ b/public/pages/joe.html
@@ -7,17 +7,16 @@
     <title>Branches</title>
 
     
-    
     <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <link rel="stylesheet" href="/static/styles/joey.css">
+    <link rel="stylesheet" href="twitch-core.css">
 </head>
 
 <body id="LoginForm">
 <div class="container">
-<h1 class="form-heading">Branches</h1>
+
 <div class="login-form">
 <div class="main-div">
     <div class="panel">
