profile-routes-hbars-htmlroute

--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -46,15 +46,15 @@
                 <div class = "Arr-Bran">
                     <a href="branches/branches" title="Branches">
                         <span class="twPc-StatLabel twPc-block">Branches</span>
-                        <span class="twPc-StatValue">10000</span>
+                        <span class="twPc-StatValue">000</span>
                     </a>
                 </div>
             </li>
             <li class="twPc-ArrangeSizeFit">
                 <div class= "Arr-Foll">
                     <a href="branches/following" title="Following">
-                        <span class="twPc-StatLabel twPc-block">Following</span>
-                        <span class="twPc-StatValue">885</span>
+                        <span class="twPc-StatLabel twPc-block">Stems</span>
+                        <span class="twPc-StatValue">000</span>
                     </a>
                 </div>
             </li>
@@ -63,7 +63,7 @@
                 <div class= "Arr-Seed">
                     <a href="branches/followers" title="Seedling">
                     <span class="twPc-StatLabel twPc-block">Seedlings</span>
-                    <span class="twPc-StatValue">1232</span>
+                    <span class="twPc-StatValue">000</span>
                     </a>
                 </div>
             </li>
@@ -80,7 +80,6 @@
         </div>
       </div>
       </div>
-
 </div>
     <h3><span class="Posts" style="text-decoration: underline;">Branches</span></h3>
 </div>
